attempting to fix mobile nav spacing

--- a/public/themes/v2/stylesheets/all.css
+++ b/public/themes/v2/stylesheets/all.css
@@ -1423,7 +1423,7 @@
 		}
 		
 		#navigation-main {
-			top: 120px;
+			top: 121px;
 		}
 		
 		#navigation-user.menu a,
